BaaxalXPython/BaaxalXPythonParser.py
# Generated from BaaxalXPython.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BaaxalXPythonParser ( Parser ):

    grammarFileName = "BaaxalXPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "'K\\u00E1ajal'", "'Xuul'", "'Ts\\u2019\\u00E1aj'", 
                     "'Ts'\\u00E1a_ti'_pantalla'", "'U_yokol'", "'Wa_jaaj_lela''", 
                     "'Ba'ale''", "'Ts'o'oksik_le condici\\u00F3n'", "'Ka'alikil'", 
                     "'Uti'al'", "'Amal'", "'Ts'o'oksik_le bucle'", "'F\\u00FAunsion'", 
                     "'Ts'o'oksik_le funci\\u00F3n'", "'Y\\u00E9etel'", 
                     "'Wa'", "'+'", "'-'", "'*'", "'/'", "'**'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "':'", "','", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "KAAJAL", "XUUL", "TSAAJ", 
                      "TSAATI", "UYOKOL", "WAJAAJ", "BAALE", "KUCH_COND", 
                      "KAALIKIL", "UTIAL", "AMAL", "KUCH_BUCLE", "FUUNSION", 
                      "KUCH_FUNC", "AND", "OR", "PLUS", "REST", "MULTIPLY", 
                      "DIVIDE", "POWER", "EQUALS", "DIFFERENT", "LESS_THAN", 
                      "GREATER_THAN", "LESS_EQUAL", "GREATER_EQUAL", "TRUE", 
                      "FALSE", "IDENTIFIER", "NUMBER", "STRING", "LPAREN", 
                      "RPAREN", "COLON", "COMMA", "LBRACK", "RBRACK", "NEWLINE", 
                      "WS", "COMMENT", "MULTI_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_comment = 2
    RULE_var_assignment = 3
    RULE_print_statement = 4
    RULE_input_statement = 5
    RULE_conditional_block = 6
    RULE_while_loop = 7
    RULE_for_loop = 8
    RULE_function_definition = 9
    RULE_expr = 10
    RULE_logical_expr = 11
    RULE_relational_expr = 12
    RULE_additive_expr = 13
    RULE_multiplicative_expr = 14
    RULE_power_expr = 15
    RULE_base = 16

    ruleNames =  [ "program", "statement", "comment", "var_assignment", 
                   "print_statement", "input_statement", "conditional_block", 
                   "while_loop", "for_loop", "function_definition", "expr", 
                   "logical_expr", "relational_expr", "additive_expr", "multiplicative_expr", 
                   "power_expr", "base" ]

    EOF = Token.EOF
    T__0=1
    KAAJAL=2
    XUUL=3
    TSAAJ=4
    TSAATI=5
    UYOKOL=6
    WAJAAJ=7
    BAALE=8
    KUCH_COND=9
    KAALIKIL=10
    UTIAL=11
    AMAL=12
    KUCH_BUCLE=13
    FUUNSION=14
    KUCH_FUNC=15
    AND=16
    OR=17
    PLUS=18
    REST=19
    MULTIPLY=20
    DIVIDE=21
    POWER=22
    EQUALS=23
    DIFFERENT=24
    LESS_THAN=25
    GREATER_THAN=26
    LESS_EQUAL=27
    GREATER_EQUAL=28
    TRUE=29
    FALSE=30
    IDENTIFIER=31
    NUMBER=32
    STRING=33
    LPAREN=34
    RPAREN=35
    COLON=36
    COMMA=37
    LBRACK=38
    RBRACK=39
    NEWLINE=40
    WS=41
    COMMENT=42
    MULTI_COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KAAJAL(self):
            return self.getToken(BaaxalXPythonParser.KAAJAL, 0)

        def COLON(self):
            return self.getToken(BaaxalXPythonParser.COLON, 0)

        def XUUL(self):
            return self.getToken(BaaxalXPythonParser.XUUL, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.StatementContext,i)


        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BaaxalXPythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(BaaxalXPythonParser.KAAJAL)
            self.state = 35
            self.match(BaaxalXPythonParser.COLON)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(BaaxalXPythonParser.XUUL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_assignment(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Var_assignmentContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Print_statementContext,0)


        def input_statement(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Input_statementContext,0)


        def conditional_block(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Conditional_blockContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.For_loopContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Function_definitionContext,0)


        def comment(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.CommentContext,0)


        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = BaaxalXPythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.var_assignment()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.print_statement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.input_statement()
                pass
            elif token in [7, 8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.conditional_block()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.while_loop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.for_loop()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.function_definition()
                pass
            elif token in [42, 43]:
                self.enterOuterAlt(localctx, 8)
                self.state = 51
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(BaaxalXPythonParser.COMMENT, 0)

        def MULTI_COMMENT(self):
            return self.getToken(BaaxalXPythonParser.MULTI_COMMENT, 0)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = BaaxalXPythonParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==42 or _la==43):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TSAAJ(self):
            return self.getToken(BaaxalXPythonParser.TSAAJ, 0)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(BaaxalXPythonParser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(BaaxalXPythonParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_var_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assignment" ):
                listener.enterVar_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assignment" ):
                listener.exitVar_assignment(self)




    def var_assignment(self):

        localctx = BaaxalXPythonParser.Var_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(BaaxalXPythonParser.TSAAJ)
            self.state = 57
            self.match(BaaxalXPythonParser.LPAREN)
            self.state = 58
            self.match(BaaxalXPythonParser.IDENTIFIER)
            self.state = 59
            self.match(BaaxalXPythonParser.COMMA)
            self.state = 60
            self.expr()
            self.state = 61
            self.match(BaaxalXPythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TSAATI(self):
            return self.getToken(BaaxalXPythonParser.TSAATI, 0)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)




    def print_statement(self):

        localctx = BaaxalXPythonParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(BaaxalXPythonParser.TSAATI)
            self.state = 64
            self.match(BaaxalXPythonParser.LPAREN)
            self.state = 65
            self.expr()
            self.state = 66
            self.match(BaaxalXPythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UYOKOL(self):
            return self.getToken(BaaxalXPythonParser.UYOKOL, 0)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(BaaxalXPythonParser.IDENTIFIER, 0)

        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_input_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_statement" ):
                listener.enterInput_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_statement" ):
                listener.exitInput_statement(self)




    def input_statement(self):

        localctx = BaaxalXPythonParser.Input_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_input_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(BaaxalXPythonParser.UYOKOL)
            self.state = 69
            self.match(BaaxalXPythonParser.LPAREN)
            self.state = 70
            self.match(BaaxalXPythonParser.IDENTIFIER)
            self.state = 71
            self.match(BaaxalXPythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conditional_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WAJAAJ(self):
            return self.getToken(BaaxalXPythonParser.WAJAAJ, 0)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(BaaxalXPythonParser.COLON, 0)

        def KUCH_COND(self):
            return self.getToken(BaaxalXPythonParser.KUCH_COND, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.StatementContext,i)


        def BAALE(self):
            return self.getToken(BaaxalXPythonParser.BAALE, 0)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_conditional_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional_block" ):
                listener.enterConditional_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional_block" ):
                listener.exitConditional_block(self)




    def conditional_block(self):

        localctx = BaaxalXPythonParser.Conditional_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditional_block)
        self._la = 0 # Token type
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(BaaxalXPythonParser.WAJAAJ)
                self.state = 74
                self.match(BaaxalXPythonParser.LPAREN)
                self.state = 75
                self.expr()
                self.state = 76
                self.match(BaaxalXPythonParser.RPAREN)
                self.state = 77
                self.match(BaaxalXPythonParser.COLON)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                    self.state = 78
                    self.statement()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self.match(BaaxalXPythonParser.KUCH_COND)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(BaaxalXPythonParser.BAALE)
                self.state = 87
                self.match(BaaxalXPythonParser.COLON)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                    self.state = 88
                    self.statement()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 94
                self.match(BaaxalXPythonParser.KUCH_COND)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KAALIKIL(self):
            return self.getToken(BaaxalXPythonParser.KAALIKIL, 0)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(BaaxalXPythonParser.COLON, 0)

        def KUCH_BUCLE(self):
            return self.getToken(BaaxalXPythonParser.KUCH_BUCLE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.StatementContext,i)


        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)




    def while_loop(self):

        localctx = BaaxalXPythonParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(BaaxalXPythonParser.KAALIKIL)
            self.state = 98
            self.match(BaaxalXPythonParser.LPAREN)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(BaaxalXPythonParser.RPAREN)
            self.state = 101
            self.match(BaaxalXPythonParser.COLON)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                self.state = 102
                self.statement()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(BaaxalXPythonParser.KUCH_BUCLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UTIAL(self):
            return self.getToken(BaaxalXPythonParser.UTIAL, 0)

        def IDENTIFIER(self):
            return self.getToken(BaaxalXPythonParser.IDENTIFIER, 0)

        def AMAL(self):
            return self.getToken(BaaxalXPythonParser.AMAL, 0)

        def expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.ExprContext,0)


        def COLON(self):
            return self.getToken(BaaxalXPythonParser.COLON, 0)

        def KUCH_BUCLE(self):
            return self.getToken(BaaxalXPythonParser.KUCH_BUCLE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.StatementContext,i)


        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = BaaxalXPythonParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BaaxalXPythonParser.UTIAL)
            self.state = 111
            self.match(BaaxalXPythonParser.IDENTIFIER)
            self.state = 112
            self.match(BaaxalXPythonParser.AMAL)
            self.state = 113
            self.expr()
            self.state = 114
            self.match(BaaxalXPythonParser.COLON)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                self.state = 115
                self.statement()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(BaaxalXPythonParser.KUCH_BUCLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUUNSION(self):
            return self.getToken(BaaxalXPythonParser.FUUNSION, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(BaaxalXPythonParser.IDENTIFIER)
            else:
                return self.getToken(BaaxalXPythonParser.IDENTIFIER, i)

        def LPAREN(self):
            return self.getToken(BaaxalXPythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BaaxalXPythonParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(BaaxalXPythonParser.COLON, 0)

        def KUCH_FUNC(self):
            return self.getToken(BaaxalXPythonParser.KUCH_FUNC, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BaaxalXPythonParser.COMMA)
            else:
                return self.getToken(BaaxalXPythonParser.COMMA, i)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = BaaxalXPythonParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BaaxalXPythonParser.FUUNSION)
            self.state = 124
            self.match(BaaxalXPythonParser.IDENTIFIER)
            self.state = 125
            self.match(BaaxalXPythonParser.LPAREN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 126
                self.match(BaaxalXPythonParser.IDENTIFIER)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==37:
                    self.state = 127
                    self.match(BaaxalXPythonParser.COMMA)
                    self.state = 128
                    self.match(BaaxalXPythonParser.IDENTIFIER)
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 136
            self.match(BaaxalXPythonParser.RPAREN)
            self.state = 137
            self.match(BaaxalXPythonParser.T__0)
            self.state = 138
            self.match(BaaxalXPythonParser.IDENTIFIER)
            self.state = 139
            self.match(BaaxalXPythonParser.COLON)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13194139553264) != 0):
                self.state = 140
                self.statement()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(BaaxalXPythonParser.KUCH_FUNC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self):
            return self.getTypedRuleContext(BaaxalXPythonParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = BaaxalXPythonParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.logical_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaaxalXPythonParser.Relational_exprContext)
            else:
                return self.getTypedRuleContext(BaaxalXPythonParser.Relational_exprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(BaaxalXPythonParser.AND)
            else:
                return self.getToken(BaaxalXPythonParser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(BaaxalXPythonParser.OR)
            else:
                return self.getToken(BaaxalXPythonParser.OR, i)

        def getRuleIndex(self):
            return BaaxalXPythonParser.RULE_logical_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expr" ):
                listener.enterLogical_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expr" ):
                listener.exitLogical_expr(self)




    def logical_expr(self):
